<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D5DBDB"
    tools:context=".AddContactActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/ct_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:drawableStart="@drawable/ic_arrow_back_ios"
            android:fontFamily="@font/san_francisco_regular"
            android:padding="15dp"
            android:text="@string/cancel"
            android:textColor="#4851E0"
            android:textSize="18sp" />


        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:drawablePadding="15dp"
            android:fontFamily="@font/san_francisco_regular"
            android:padding="15dp"
            android:text="@string/save" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <LinearLayout
        android:id="@+id/ct_avatar_img"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.29"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ct_buttons">


        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_contact_avatar"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:elevation="2dp"
            android:scaleType="centerCrop"
            android:src="@drawable/default_contact_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/customRoundedImgView" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btn_add_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:fontFamily="@font/san_francisco_regular"
            android:padding="10dp"
            android:text="@string/add_photo"
            android:textColor="#4851E0"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ct_person_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:background="#FFFFFF"
        android:orientation="vertical"
        android:paddingStart="8dp"
        android:paddingEnd="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ct_avatar_img">

        <EditText
            android:id="@+id/et_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/san_francisco_regular"
            android:hint="@string/et_first_name"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:minHeight="48dp"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/san_francisco_regular"
            android:hint="@string/et_last_name"
            android:inputType="text"
            android:maxLines="1"
            android:minHeight="48dp"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et_organization"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/san_francisco_regular"
            android:hint="@string/et_organization"
            android:inputType="text"
            android:minHeight="48dp"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ct_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:background="#FFFFFF"
        android:orientation="vertical"
        android:paddingStart="8dp"
        android:paddingEnd="4dp"
        android:weightSum="6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ct_person_name">

        <EditText
            android:id="@+id/et_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="phone"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:maxLines="1"
            android:minHeight="48dp"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ct_email_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:background="#FFFFFF"
        android:orientation="vertical"
        android:paddingStart="8dp"
        android:paddingEnd="4dp"
        android:weightSum="6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ct_phone_number">

        <EditText
            android:id="@+id/et_email_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:minHeight="48dp"
            android:textSize="18sp" />

    </LinearLayout>

    <RadioGroup
        android:id="@+id/rg_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:background="@color/white"
        android:minHeight="50dp"
        android:orientation="horizontal"
        android:paddingHorizontal="8dp"
        android:weightSum="2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ct_email_address">

        <RadioButton
            android:id="@+id/rb_male"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/male"
            android:textColor="#4851E0"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rb_female"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/female"
            android:textColor="#4851E0"
            android:textSize="18sp"
            android:textStyle="bold" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>